--- a/class10-materials/pushwork-Wireframe/style.css
+++ b/class10-materials/pushwork-Wireframe/style.css
@@ -277,6 +277,8 @@ footer{
 .footerList li{
   padding: 5% 0;
   flex-direction: column;
+
+  
 }
 
 footer section{
@@ -284,6 +286,7 @@ footer section{
   flex-direction: column;
   flex: 0 0 1;
   width: 100px;
+  line-height: 2em;
 }
 
 ul{
@@ -291,6 +294,9 @@ ul{
   margin: 0;
 }
 
+p{
+  line-height: 3.5rem;
+}
 
 /*
   ========================================
@@ -316,6 +322,7 @@ body *{
   text-align: left;
   flex: 0 0 50%;
   padding-right: 10%;
+  
 }
 
 .mainText *, .reviewSection *{
@@ -491,6 +498,7 @@ button:hover{
   .sectionTwo .mainText{
     padding: 5% 0 5% 0;
     flex-direction: row;
+    
   }
   .sectionTwo{
     display: flex;
