--- a/class-11-materials/box-model-practice/css/style.css
+++ b/class-11-materials/box-model-practice/css/style.css
@@ -1,7 +1,44 @@
-/* Please give the h1 some padding on two sides and zero on others, margin on the sides with no padding, thin purple border on sides without margin, gold background but the gold must be the exact color from the hufflepuff crest */
+/* Please give the h1 some padding on two sides and zero on others, margin on the sides with no padding, 
+thin purple border on sides without margin, gold background but the gold must be the exact color from 
+the hufflepuff crest */
 
-/* Please give the h2 significant padding on the left and right, a red border on the left and right but the red must be the same from the mighty morphin power rangers logo, and an orange background, and the roboto font */
+h1{
+    padding: 2rem 0;
+    margin: 0 2rem;
+    border-top: purple solid 5px ;
+    border-bottom:purple solid 5px ;
+    background-color: gold;
+}
 
-/* Please give the section a thick magenta border on the left, 100px of padding on the top and bottom, and 200px of margin on every side without padding or border */
+
+/* Please give the h2 significant padding on the left and right, 
+a red border on the left and right but the red must be the same from the mighty morphin power rangers logo, 
+and an orange background, and the roboto font */
+
+h2{
+    padding: 0 3rem;
+    border-right: solid red 5px ;
+    border-left: solid red 5px;
+    background-color: orange;
+    font-family: "Roboto";
+}
+
+
+
+/* Please give the section a thick magenta border on the left, 
+100px of padding on the top and bottom, and 200px of margin on every side without padding or border */
+
+section{
+    border-left: solid magenta 2px;
+    padding: 100px 0;
+    margin: 0 200px 0 0;
+}
+
 
 /* Please make the spans have thin Dodger Blue borders, padding on the bottom and right, and light red background */
+
+span{
+    border: solid thin dodgerblue;
+    padding: 0 2rem 2rem 0 ;
+    background-color: rgb(253, 103, 103);
+}
