--- a/class14-materials/class-weekend-boring/css/style.css
+++ b/class14-materials/class-weekend-boring/css/style.css
@@ -1,5 +1,5 @@
 /******************************************
-/* CSS
+/* HOT GARBAGE - PLEASE DON'T MIMIC THIS CSS
 /*******************************************/
 
 /* Box Model Hack */
@@ -10,14 +10,32 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
-.container{
-  margin-top: 5%;
-  display: block;
+h1, h2, form{
   text-align: center;
-
 }
-
-
+button{
+  display: block;
+  margin: 20px auto;
+}
+ul{
+  width: 100px;
+  height: 200px;
+  border: 3px solid black;
+  margin: 0 auto;
+  list-style: none;
+  padding: 0;
+}
+li{
+  text-align: center;
+  width: 94px;
+  height: 49px;
+  border: 1px solid black;
+}
+h2{
+  font-size: 100px;
+  color: red;
+  font-weight: bold;
+}
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
